Add public folder assets to repository for Vercel deployment - Remove public from .gitignore - Add all static assets (images, logos, models) - Exclude .exe files from git

--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,6 @@ dist
 
 # Gatsby files
 .cache/
-public
 
 # Storybook build outputs
 .out
@@ -95,3 +94,6 @@ temp/
 # OS generated files
 Thumbs.db
 ehthumbs.db
+
+# Executable files
+*.exe
